--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </tr>
     </table>
     <p>I obtained my bachelor's in Multimedia Design and Development at the age of 19.
-    I have since then been working on my own personal projects to better put better present onkeypress
+    I have since then been working on my own personal projects to better present
   my skills.
 </p>
     <a href="https://www.linkedin.com/in/justin-santiago-148b4b8a/"> View my Linkedin</a>
@@ -57,7 +57,7 @@
         <td>⭐⭐⭐⭐⭐</td>
       </tr>
       <tr>
-        <td>CSSL</td>
+        <td>CSS</td>
         <td>⭐⭐⭐⭐⭐</td>
       </tr>
       <tr>
