Bug Fix for contact.html

--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,6 @@
 <hr>
   <a href="index.html">Home Page</a>
 <a href="hobbies.html">My Hobbies</a>
-<a href="Contact.html">Contact me </a>
+<a href="contact.html">Contact me </a>
   </body>
 </html>
