--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </table>
     <hr>
     <h3>Skills</h3>
-    <table cellspacing="10px">
+    <table cellspacing="10px" id="table1">
       <tr>
         <td>HTML</td>
         <td>⭐⭐⭐⭐⭐</td>
